--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11652,6 +11652,7 @@ pages-option=خيار الصفحات
 pages-options=خيارات الصفحات
 pages-to-export=صفحات للتصدير
 pages-to-publish=صفحات للنشر
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=تتيح لك تنويعات صفحات المواقع العمل بالتوازي مع إصدارات مختلفة من صفحات الموقع. إذ تتم مشاركة المحتوى بواسطة جميع تنويعات صفحات المواقع لديك. ويمكن جدولة النشر للبث المباشر لأي تنويع لصفحات المواقع أو تنفيذه يدويًا.
 pages-with-tag-x=صفحات دالتها <em>{0}</em>.
 pages-with-x-x=صفحات مع {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=تحديد نوع الأمر
 select-other-item=تحديد عنصر آخر
 select-page=تحديد صفحة
 select-page-template-set=تحديد مجموعة قوالب الصفحات
-select-pages=الصفحة المختارة
 select-parent=تحديد أصل
 select-parent-site=تحديد الموقع الأصلي
 select-poll=تحديد استطلاع
