--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -11652,6 +11652,7 @@ pages-option=Опция за страници (Automatic Translation)
 pages-options=Опции за страници (Automatic Translation)
 pages-to-export=Страници за експортиране (Automatic Translation)
 pages-to-publish=Страници за публикуване (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Страници с маркер <em>{0}</em>.
 pages-with-x-x=Страници с маркер <em>{0}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Избор на друг елемент (Automatic Translation)
 select-page=Избор на страница (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Избрани страници
 select-parent=Избор на родител (Automatic Translation)
 select-parent-site=Избор на родителски сайт (Automatic Translation)
 select-poll=Избор на анкета (Automatic Translation)
