--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11654,6 +11654,7 @@ pages-option=Opció de pàgines
 pages-options=Opcions de pàgines
 pages-to-export=Pàgines a exportar
 pages-to-publish=Pàgines a publicar
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Les variacions de pàgines del lloc web us permeten treballar en paral·lel en diferents versions de les pàgines del lloc web. El contingut és compartit per totes les variacions de pàgines del lloc web. La publicació a live de qualsevol variació de les pàgines del lloc web es pot programar o fer manualment.
 pages-with-tag-x=Pàgines amb l'etiqueta <em>{0}</em>.
 pages-with-x-x=Pàgines amb {0} <em>{1}</em>.
@@ -14238,7 +14239,6 @@ select-order-type=Selecciona el tipus de comanda
 select-other-item=Seleccioneu un altre element
 select-page=Seleccioneu una pàgina
 select-page-template-set=Seleccioneu un conjunt de plantilles de pàgina
-select-pages=Pàgines seleccionades
 select-parent=Seleccioni el pare
 select-parent-site=Seleccioneu el lloc web principal
 select-poll=Selecciona enquesta
