--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11654,6 +11654,7 @@ pages-option=Seitenoption
 pages-options=Seitenoptionen
 pages-to-export=Exportierte Seiten
 pages-to-publish=Zu publizierende Seiten
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Mit sitespezifischen Seitenvariationen können Sie mit verschiedenen Versionen der Seiten Ihrer Site gleichzeitig arbeiten. Inhalte werden dabei von allen sitespezifischen Seitenvariationen gemeinsam benutzt. Publikationen jeder sitespezifischen Seitenvariation können geplant oder manuall ausgelöst werden.
 pages-with-tag-x=Seiten mit dem Schlagwort <em>{0}</em>.
 pages-with-x-x=Seiten mit {0} <em>{1}</em>.
@@ -14238,7 +14239,6 @@ select-order-type=Bestellungstyp auswählen
 select-other-item=Anderes Element auswählen
 select-page=Seite auswählen
 select-page-template-set=Seitenvorlagensatz auswählen
-select-pages=Seiten auswählen
 select-parent=Übergeordneten Artikel wählen
 select-parent-site=Übergeordnete Site auswählen
 select-poll=Umfrage auswählen
