--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -11652,6 +11652,7 @@ pages-option=Επιλογή σελίδων (Automatic Translation)
 pages-options=Επιλογές σελίδων (Automatic Translation)
 pages-to-export=Σελίδες προς εξαγωγή (Automatic Translation)
 pages-to-publish=Σελίδες προς δημοσίευση (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Σελίδες με ετικέττα <em>{0}</em>.
 pages-with-x-x=Σελίδες με {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Επιλογή άλλου στοιχείου (Automatic Translation)
 select-page=Επιλογή σελίδας (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Επιλογή σελίδων
 select-parent=Επιλογή γονικού στοιχείου (Automatic Translation)
 select-parent-site=Επιλογή γονικής τοποθεσίας (Automatic Translation)
 select-poll=Επιλογή δημοσκόπησης (Automatic Translation)
