--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -11654,6 +11654,7 @@ pages-option=Opción de páginas
 pages-options=Opciones de páginas
 pages-to-export=Páginas a exportar
 pages-to-publish=Páginas a publicar
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Las variaciones de páginas del sitio le permiten trabajar en paralelo en diferentes versiones de las páginas del sitio. El contenido es compartido por todas las variaciones de páginas del sitio.Las publicaciones para Live de cualquier variación de páginas del sitio pueden ser programadas o ejecutadas manualmente.
 pages-with-tag-x=Páginas con etiqueta <em>{0}</em>.
 pages-with-x-x=Páginas con {0} <em>{1}</em>.
@@ -14238,7 +14239,6 @@ select-order-type=Seleccionar tipo de pedido
 select-other-item=Seleccione otro elemento
 select-page=Seleccionar página
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Seleccionar páginas
 select-parent=Seleccionar superior
 select-parent-site=Seleccionar sitio padre
 select-poll=Seleccione encuesta
