--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -11652,6 +11652,7 @@ pages-option=امکانات صفحات
 pages-options=گزینه‌های صفحات
 pages-to-export=صفحات برای صدور
 pages-to-publish=صفحات برای انتشار
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=تنوع صفحات سایت این اجازه را می‌دهد که به صورت موازی بر روی نسخه‌های مختلف کار کنید. محتوا با تمام صفحات سایت به اشتراک گذاشته می‌شود. انتشار به لایو از ار صفحه سایت با برنامه‌ریزی و یا به صورت دستی انجام می‌شود.
 pages-with-tag-x=صفحات با برچسب <em>{0}</em>.
 pages-with-x-x=صفحات با {0} <em>{1}</em>
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=انتخاب مورد دیگر (Automatic Translation)
 select-page=صفحه را انتخاب کنید
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=انتخاب صفحه
 select-parent=انتخاب والد
 select-parent-site=سایت والد را انتخاب کنید
 select-poll=انتخاب نظرسنجی
