--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11651,6 +11651,7 @@ pages-option=Sivujen Valinta
 pages-options=Sivun asetukset
 pages-to-export=Sivut vietäväksi ulos.
 pages-to-publish=Sivut julkaistavaksi.
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Sivuston sivujen muunnelmat mahdollistavat luomaan rinnakkaisa versoita sivuston sivurakenteesta. Sisältö jaetaan kaikkien sivuston sivujen muunnelmien kanssa. Sivujen julkaisu voidaan aikatauluttaa tai tehdä käsin.
 pages-with-tag-x=Sivut, joissa tagi <em>{0}</em>.
 pages-with-x-x=Sivut, joissa tagi <em>{0}</em>.
@@ -14235,7 +14236,6 @@ select-order-type=Valitse tilaustyyppi
 select-other-item=Valitse Toinen Tuote
 select-page=Valitse Sivu
 select-page-template-set=Valitse sivumallijoukko
-select-pages=Valitut sivut
 select-parent=Valitse isäntäartikkeli
 select-parent-site=Valitse isäntä sivu
 select-poll=Valitse kysely
