--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -11652,6 +11652,7 @@ pages-option=Opción de páxinas
 pages-options=Opcións de páxinas
 pages-to-export=Pages to Export (Automatic Copy)
 pages-to-publish=Pages to Publish (Automatic Copy)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=As variantes de páxinas de sitio permiten traballar en diferentes versións das páxinas dun sitio, en paralelo. O contido é compartido por todas as variantes de páxinas do sitio. As publicacións para produción (live) de calquera variante de páxinas do sitio pode ser axendada ou efectuada manualmente.
 pages-with-tag-x=Páxinas etiquetadas con <em>{0}</em>.
 pages-with-x-x=Páxinas con {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Select Other Item (Automatic Copy)
 select-page=Seleccionar páxina
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Seleccionar páxinas
 select-parent=Seleccionar pai
 select-parent-site=Select Parent Site (Automatic Copy)
 select-poll=Seleccionar enquisa
