--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -11652,6 +11652,7 @@ pages-option=पेज विकल्प (Automatic Translation)
 pages-options=पेज विकल्प (Automatic Translation)
 pages-to-export=निर्यात करने के लिए पेज (Automatic Translation)
 pages-to-publish=प्रकाशित करने के लिए पेज (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=<em>{0}</em> टैग के साथ पेज .
 pages-with-x-x=के साथ पेज{0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=अन्य आइटम का चयन करें (Automatic Translation)
 select-page=पेज चुनें (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=चुनें हुए Pages
 select-parent=माता-पिता का चयन करें (Automatic Translation)
 select-parent-site=पैरेंट साइट का चयन करें (Automatic Translation)
 select-poll=पोल चुनें (Automatic Translation)
