--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11655,6 +11655,7 @@ pages-option=Oldalak lehetőség
 pages-options=Oldal beállítások
 pages-to-export=Exportálandó oldalak
 pages-to-publish=Publikálandó oldalak
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=A Webhely Oldal Variációk lehetővé teszik számodra, hogy párhuzamosan dolgozhass a webhely oldalainak különböző változataival. A tartalom megosztásra kerül az összes Webhely Oldal Variációkaiddal. Bármely Webhely Oldal Variációk élesbe publikálása időzíthető vagy manuálisan elvégezhető.
 pages-with-tag-x=<em>{0}</em> címkével rendelkező oldalak.
 pages-with-x-x=Oldalak ezzel: {0} <em>{1}</em>.
@@ -14239,7 +14240,6 @@ select-order-type=Rendeléstípus kiválasztása
 select-other-item=Válasszon egy másik elemet
 select-page=Oldal kiválasztása
 select-page-template-set=Oldalsablonkészlet kiválasztása
-select-pages=Kijelölt oldalak
 select-parent=Válassz szülőt
 select-parent-site=Szülő webhely választása
 select-poll=Szavazás választása
