--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11652,6 +11652,7 @@ pages-option=Opsi Halaman (Automatic Translation)
 pages-options=Opsi Halaman (Automatic Translation)
 pages-to-export=Halaman yang Akan Diekspor (Automatic Translation)
 pages-to-publish=Halaman untuk Dipublikasikan (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Artikel dengan tag <em>{0}</em>.
 pages-with-x-x=Halaman dengan {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Pilih Item Lainnya (Automatic Translation)
 select-page=Pilih Halaman (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Pilih Halaman
 select-parent=Pilih Induk (Automatic Translation)
 select-parent-site=Pilih Situs Induk (Automatic Translation)
 select-poll=Pilih Polling (Automatic Translation)
