--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -11653,6 +11653,7 @@ pages-option=Opzione Pagine (Automatic Translation)
 pages-options=Opzioni Pagine
 pages-to-export=Pagine da Esportare
 pages-to-publish=Pagine da Pubblicare
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Variazione delle Pagine del Sito ti consente di lavorare in parallelo su differenti versioni dlle pagine del sito. I contenuti sono condivisi da tutte le variazioni di pagina. La pubblicazione sul sistema Live di qualsiasi Variazione delle Pagine del sito può avvenire in modo programmato o eseguita manualmente.
 pages-with-tag-x=Pagine con il tag <em>{0}</em>.
 pages-with-x-x=Immagini con {0} <em>{1}</em>.
@@ -14237,7 +14238,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Selezionare un altro elemento (Automatic Translation)
 select-page=Seleziona Pagina
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Seleziona Pagine
 select-parent=Seleziona Padre
 select-parent-site=Seleziona Sito Padre
 select-poll=Seleziona Sondaggio
