--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11652,6 +11652,7 @@ pages-option=אופציית עמודים
 pages-options=אפשרויות עמודים
 pages-to-export=דפים לייצוא
 pages-to-publish=דפים לפרסום
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=וריאציות דפי אתר מאפשרות לך לעבוד במקביל בגרסאות שונות של דפי האתר. התוכן משותף בין כל וריאציות דפי האתר שלך. ניתן לתזמן פרסום ל-Live של וריאציית דפי אתר או לפרסם אותה ידנית.
 pages-with-tag-x=דפים עם תגית <em>{0}</em>
 pages-with-x-x=דפים עם תגית <em>{0}</em>
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=בחר פריט אחר (Automatic Translation)
 select-page=בחר דף
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=בחר עמודים
 select-parent=בחר אב
 select-parent-site=בחר אתר הורה
 select-poll=בחר סקר
