--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11654,6 +11654,7 @@ pages-option=ページオプション
 pages-options=ページオプション
 pages-to-export=エクスポートするページ
 pages-to-publish=公開するページ
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=サイトページバリエーションはサイトでのページの様々なページバージョンを同時に制作または編集ができます。コンテンツはすべてのサイトページバリエーションに公開されます。サイトページバリエーションはいつでも公開でき、さらに予定設定によって自動的に公開できます。
 pages-with-tag-x=ページのタグ <em>{0}</em>.
 pages-with-x-x={0} <em>{1}</em>の画像
@@ -14238,7 +14239,6 @@ select-order-type=注文タイプを選択
 select-other-item=他の項目を選択
 select-page=ページを選択
 select-page-template-set=ページテンプレートセットを選択
-select-pages=ページの選択
 select-parent=親を選択
 select-parent-site=親サイトを選択
 select-poll=アンケートの設定
