--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -11652,6 +11652,7 @@ pages-option=페이지 옵션
 pages-options=페이지 옵션
 pages-to-export=내보낼 페이지
 pages-to-publish=게시할 페이지
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=<em>{0}</em> 태그가 있는 페이지.
 pages-with-x-x={0} <em>{1}</em>을 가진 페이지
@@ -14236,7 +14237,6 @@ select-order-type=주문 유형 선택
 select-other-item=다른 항목 선택
 select-page=페이지 선택
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=선정된 페이지
 select-parent=상위 항목 선택
 select-parent-site=상위 사이트 선택
 select-poll=설문 조사 선택
