--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11652,6 +11652,7 @@ pages-option=Puslapių parinktis (Automatic Translation)
 pages-options=Puslapių parinktys (Automatic Translation)
 pages-to-export=Eksportuotii puslapiai (Automatic Translation)
 pages-to-publish=Puslapiai, kuriuos reikia publikuoti (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Pages with tag <em>{0}</em>. (Automatic Copy)
 pages-with-x-x=Pages with {0} <em>{1}</em>. (Automatic Copy)
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Pasirinkti kitą elementą (Automatic Translation)
 select-page=Pasirinkti puslapį (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Pasirinkti puslapius (Automatic Translation)
 select-parent=Pasirinkti pirminį (Automatic Translation)
 select-parent-site=Pasirinkti pirminę svetainę (Automatic Translation)
 select-poll=Pasirinkite Apklausa (Automatic Translation)
