--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11652,6 +11652,7 @@ pages-option=Alternativ for sider (Automatic Translation)
 pages-options=Alternativer for sider (Automatic Translation)
 pages-to-export=Sider til eksport
 pages-to-publish=Sider til publisering
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Sider med tagg <em>{0}</em>.
 pages-with-x-x=Sider med {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Velg annet element (Automatic Translation)
 select-page=Velg Side (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Velg sider
 select-parent=Velg overordnet
 select-parent-site=Velg overliggende nettsted
 select-poll=Velg avstemming
