--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11655,6 +11655,7 @@ pages-option=Paginaopties
 pages-options=Pagina opties
 pages-to-export=Te exporteren pagina's
 pages-to-publish=Te publiceren pagina's
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Sitepaginavarianten bieden u de mogelijkheid om in parallel te werken in verschillende versies van de sitepagina's. Inhoud wordt gedeeld door alle paginavarianten van uw site. Publicatie naar live van een paginavariant kan worden gepland of handmatig gebeuren.
 pages-with-tag-x=Pagina's met label <em>{0}</em>.
 pages-with-x-x=Pagina's met {0} <em>{1}</em>.
@@ -14239,7 +14240,6 @@ select-order-type=Bestellingtype selecteren
 select-other-item=Ander item selecteren
 select-page=Pagina selecteren
 select-page-template-set=Paginasjabloonset selecteren
-select-pages=Pagina's selecteren
 select-parent=Selecteer bovenliggende
 select-parent-site=Bovenliggende site selecteren
 select-poll=Opiniepeiling selecteren
