--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11652,6 +11652,7 @@ pages-option=Opcja Strony (Automatic Translation)
 pages-options=Opcje Stron
 pages-to-export=Strony do wyeksportowania
 pages-to-publish=Strony do publikacji
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Odmiany stron witryny umożliwiają równoległą pracę w różnych wersjach stron witryny. Treść jest współdzielona przez wszystkie Twoje Odmiany Stron Witryny. Publikację na żywo dowolnej odmiany stron witryny można zaplanować lub wykonać ręcznie.
 pages-with-tag-x=Strony z tagiem <em>{0}</em>.
 pages-with-x-x=Strony z {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Wybierz inny element (Automatic Translation)
 select-page=Wybierz stronę (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Wybierz strony
 select-parent=Wybierz rodzica (Automatic Translation)
 select-parent-site=Wybierz nadrzędną witrynę
 select-poll=Wybierz ankietę
