--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11652,6 +11652,7 @@ pages-option=Opção de páginas
 pages-options=Opções de Páginas
 pages-to-export=Páginas a exportar
 pages-to-publish=Páginas a publicar
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Variações de páginas do site permitem que você trabalhe em paralelo em diferentes versões das páginas do site. O conteúdo é compartilhado por todos as suas Variações de Páginas do Site. Publicações para o Live de qualquer Variação de Páginas do Site podem ser agendadas ou executadas manualmente.
 pages-with-tag-x=Páginas com marcador <em>{0}</em>.
 pages-with-x-x=Páginas com {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Selecionar tipo de pedido
 select-other-item=Selecionar outro item
 select-page=Selecionar Página
 select-page-template-set=Selecionar conjunto de modelo de página
-select-pages=Selecionar páginas
 select-parent=Selecionar Pai
 select-parent-site=Escolher Site Superior
 select-poll=Selecione uma Enquete
