--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -11654,6 +11654,7 @@ pages-option=Opção de páginas (Automatic Translation)
 pages-options=Opções de Paginas
 pages-to-export=Páginas a Exportar
 pages-to-publish=Páginas a Publicar
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Variações de Páginas de Site permitem trabalhar em diferentes versões das páginas de um site, em paralelo. O conteúdo é partilhado por todas as Variações de Páginas do Site. As publicações para produção (live) de qualquer Variação de Páginas do Site pode ser agendada ou efetuada manualmente.
 pages-with-tag-x=Páginas com tag <em>{0}</em>.
 pages-with-x-x=Páginas com {0} <em>{1}</em>.
@@ -14238,7 +14239,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Selecione outro item (Automatic Translation)
 select-page=Select Page (Automatic Copy)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Selecionar Páginas
 select-parent=Selecionar Pai
 select-parent-site=Selecionar Site Pai
 select-poll=Selecionar Votação
