--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -11652,6 +11652,7 @@ pages-option=Opțiune pagini (Automatic Translation)
 pages-options=Opțiuni pagini (Automatic Translation)
 pages-to-export=Pagini de exportat (Automatic Translation)
 pages-to-publish=Pagini de publicat (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Pagini cu etichete <em>{0}</em>.
 pages-with-x-x=Pagini cu {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Selectare alt element (Automatic Translation)
 select-page=Selectare pagină (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Selecteaza Pagini
 select-parent=Selectare părinte (Automatic Translation)
 select-parent-site=Selectare site părinte (Automatic Translation)
 select-poll=Selectare sondaj (Automatic Translation)
