--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -11652,6 +11652,7 @@ pages-option=Вариант страниц (Automatic Translation)
 pages-options=Параметры страниц (Automatic Translation)
 pages-to-export=Страницы для экспорта
 pages-to-publish=Страницы для публикации
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Страницы с тегом <em>{0}</em>.
 pages-with-x-x=Страницы с {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Выберите другой элемент (Automatic Translation)
 select-page=Выберите Страницу (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Выберите страницы
 select-parent=Выберите родитель (Automatic Translation)
 select-parent-site=Выберите родительский сайт
 select-poll=Выберите опрос (Automatic Translation)
