--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -11652,6 +11652,7 @@ pages-option=Možnosť Strany (Automatic Translation)
 pages-options=Možnosti stránky
 pages-to-export=Stránky na export
 pages-to-publish=Stránky na publikovanie
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Stránky so značkou <em>{0}</em>.
 pages-with-x-x=Stránky s {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Vybrať inú položku (Automatic Translation)
 select-page=Vybrať stranu (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Vybrať stránky
 select-parent=Vybrať rodiča
 select-parent-site=Vybrať rodičovské sídlo
 select-poll=Vybrať anketu
