--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -11652,6 +11652,7 @@ pages-option=Možnost strani (Automatic Translation)
 pages-options=Možnosti strani (Automatic Translation)
 pages-to-export=Strani za izvoz (Automatic Translation)
 pages-to-publish=Strani za objavo (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Strani z oznako <em>{0}</em>.
 pages-with-x-x=Strani z oznako <em>{0}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Izberite drug element (Automatic Translation)
 select-page=Izberite stran (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Izbrane strani
 select-parent=Izberite nadrejeno (Automatic Translation)
 select-parent-site=Izberite nadrejeno mesto (Automatic Translation)
 select-poll=Izberi anketo (Automatic Translation)
