--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11652,6 +11652,7 @@ pages-option=Sidalternativ
 pages-options=Sidalternativ
 pages-to-export=Sidor att exportera
 pages-to-publish=Sidor att publicera
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Med webbplatsens sidvariationer kan du arbeta parallellt med olika variationer av sidorna på webbplatsen. Innehållet delas av alla dina sidvariationer för webbplatsen. Publicering i live för en sidvariation på webbplatsen kan schemaläggas eller genomföras manuellt.
 pages-with-tag-x=Sidor med tagg <em>{0}</em>.
 pages-with-x-x=Sidor med {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Välj ordertyp
 select-other-item=Välj ett annat objekt
 select-page=Välj sida
 select-page-template-set=Välj sidmalluppsättning
-select-pages=Välj sidor
 select-parent=Välj överordnad
 select-parent-site=Välj överordnad plats
 select-poll=Välj omröstning
