--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -11652,6 +11652,7 @@ pages-option=பக்கங்களின் விருப்பம்
 pages-options=பக்கங்களின் விருப்பங்கள்
 pages-to-export=எக்ஸ்போர்ட் செய்யப்படும் பக்கங்கள்
 pages-to-publish=வெளியிடப்படும் பக்கங்கள்
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Pages with tag <em>{0}</em>. (Automatic Copy)
 pages-with-x-x=Pages with {0} <em>{1}</em>. (Automatic Copy)
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Select Other Item (Automatic Copy)
 select-page=பக்கத்தை தேர்ந்தெடுக்கவும்
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=பக்கத்தைத் தேர்ந்தெடு
 select-parent=Select Parent (Automatic Copy)
 select-parent-site=Select Parent Site (Automatic Copy)
 select-poll=வாக்கெடுப்பைத் தேர்ந்தெடுக்கவும்
