--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -11652,6 +11652,7 @@ pages-option=ตัวเลือกของหน้า
 pages-options=ตัวเลือกของหน้า
 pages-to-export=หน้าที่จะส่งออก
 pages-to-publish=หน้าที่จะเผยแพร่
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=หน้าที่มีแท็ก <em>{0}</em>.
 pages-with-x-x=หน้าที่มี {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=เลือกประเภทคำสั่ง
 select-other-item=เลือกรายการอื่น
 select-page=เลือกหน้า
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=เลือกหน้า
 select-parent=เลือกระดับบรรพบุรุษ
 select-parent-site=เลือกไซต์หลัก
 select-poll=เลือกแบบสำรวจ
