--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11652,6 +11652,7 @@ pages-option=Sayfalar Seçeneği (Automatic Translation)
 pages-options=Sayfa Seçenekleri (Automatic Translation)
 pages-to-export=Verilecek Sayfalar (Automatic Translation)
 pages-to-publish=Yayımlanacak Sayfalar (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=<em>{0}</em> etiketi ile sayfalar.
 pages-with-x-x=<em>{0}</em> etiketi ile sayfalar.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Diğer Öğeyi Seç (Automatic Translation)
 select-page=Sayfa Seç (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Seçilmiş Sayfalar
 select-parent=Üst Öğe Seç (Automatic Translation)
 select-parent-site=Üst Site Seç (Automatic Translation)
 select-poll=Yoklama Seç (Automatic Translation)
