--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11652,6 +11652,7 @@ pages-option=Tùy chọn Trang (Automatic Translation)
 pages-options=Tùy chọn
 pages-to-export=Các trang cần xuất (Automatic Translation)
 pages-to-publish=Trang để Xuất bản
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Các trang có đánh dấu <em>{0}</em>.
 pages-with-x-x=Các trang với {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Chọn Mục Khác (Automatic Translation)
 select-page=Chọn Trang (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Chọn Trang
 select-parent=Chọn Parent (Phụ huynh) (Automatic Translation)
 select-parent-site=Chọn trang TTĐT cấp trên
 select-poll=Chọn bình chọn
