--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11654,6 +11654,7 @@ pages-option=页面选项
 pages-options=页面选项
 pages-to-export=导出页面
 pages-to-publish=发布页面
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=站点页面变体允许您在此站点页面的不同版本中并行工作。内容共享在您所有站点分支上。可以预订或者手动发布任何站点页面变体到Live。
 pages-with-tag-x=带有<strong>{0}</strong>标签的页面。
 pages-with-x-x=带有{0}<em>{1}</em>的页面。
@@ -14238,7 +14239,6 @@ select-order-type=选择订单类型
 select-other-item=选择其他条目
 select-page=选择页面
 select-page-template-set=选择页面模板集
-select-pages=选择页面
 select-parent=选择母文件夹
 select-parent-site=选择上级站点
 select-poll=选择投票
