--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -11653,6 +11653,7 @@ pages-option=頁面選項
 pages-options=頁面選項
 pages-to-export=頁面以匯出
 pages-to-publish=頁面以出版
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=有標籤<em>{0}</em>的頁面。
 pages-with-x-x=有 {0} <em>{1}</em>的頁面。
@@ -14237,7 +14238,6 @@ select-order-type=選擇訂單類型
 select-other-item=選擇其他項目
 select-page=選擇頁面
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=選擇頁面
 select-parent=選擇上層
 select-parent-site=選擇父站台
 select-poll=選擇投票
