--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11652,6 +11652,7 @@ pages-option=Indstillingen Sider (Automatic Translation)
 pages-options=Indstillinger for sider (Automatic Translation)
 pages-to-export=Sider, der skal eksporteres (Automatic Translation)
 pages-to-publish=Sider, der skal udgives (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Sider med etiket <em>{0}</em>.
 pages-with-x-x=Sider med {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Vælg andet element (Automatic Translation)
 select-page=Select Page (Automatic Copy)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Vælg sider
 select-parent=Vælg overordnet (Automatic Translation)
 select-parent-site=Select Parent Site (Automatic Copy)
 select-poll=Select Poll (Automatic Copy)
