--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_GB.properties
@@ -11652,6 +11652,7 @@ pages-option=Pages Option (Automatic Copy)
 pages-options=Pages Options (Automatic Copy)
 pages-to-export=Pages to Export (Automatic Copy)
 pages-to-publish=Pages to Publish (Automatic Copy)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site pages variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your site pages variations. Publication to live of any site pages variation can be scheduled or done manually. (Automatic Copy)
 pages-with-tag-x=Pages with tag <em>{0}</em>. (Automatic Copy)
 pages-with-x-x=Pages with {0} <em>{1}</em>. (Automatic Copy)
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Select Other Item (Automatic Copy)
 select-page=Select Page (Automatic Copy)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Select Pages (Automatic Copy)
 select-parent=Select Parent (Automatic Copy)
 select-parent-site=Select Parent Site (Automatic Copy)
 select-poll=Select Poll (Automatic Copy)
