--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -11652,6 +11652,7 @@ pages-option=Lehekülgede valik (Automatic Translation)
 pages-options=Lehtede suvandid (Automatic Translation)
 pages-to-export=Eksporditud leheküljed (Automatic Translation)
 pages-to-publish=Avaldadavad leheküljed (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Lehed sildiga <em>{0}</em>.
 pages-with-x-x=Lehed sildiga <em>{0}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Vali muu üksus (Automatic Translation)
 select-page=Vali leht (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Valitud lehed
 select-parent=Vali ema (Automatic Translation)
 select-parent-site=Peamise saidi valimine (Automatic Translation)
 select-poll=Vali küsitlus (Automatic Translation)
