--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -11654,6 +11654,7 @@ pages-option=Option des pages
 pages-options=Options des pages
 pages-to-export=Pages à exporter
 pages-to-publish=Pages à publier
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Les variantes de pages de site vous permettent de travailler en parallèle les différentes versions des page du site. Les contenus sont partagés à toutes les variantes de pages de site. La publication en production de n'importe quelles variantes de page de site peut être planifiée ou lancée manuellement.
 pages-with-tag-x=Pages avec l'étiquette <em>{0}</em>.
 pages-with-x-x=Pages avec {0} <em>{1}</em>.
@@ -14238,7 +14239,6 @@ select-order-type=Sélectionnez le type de commande
 select-other-item=Sélectionnez un autre élément
 select-page=Sélectionner la page
 select-page-template-set=Sélectionner l'ensemble de modèles de page
-select-pages=Pages Choisies
 select-parent=Sélectionner Parent
 select-parent-site=Sélectionner un site parent
 select-poll=Choisir un sondage
