--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11652,6 +11652,7 @@ pages-option=Opsyen Halaman (Automatic Translation)
 pages-options=Opsyen Halaman (Automatic Translation)
 pages-to-export=Laman untuk Dieksport (Automatic Translation)
 pages-to-publish=Halaman untuk Diterbitkan (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Variasi halaman tapak membolehkan anda bekerja selari dengan versi halaman yang berbeza di laman web ini. Kandungan dikongsi oleh semua halaman tapak anda. Penerbitan untuk hidup mana-mana halaman laman web variasi boleh dijadualkan atau dilakukan secara manual. (Automatic Translation)
 pages-with-tag-x=Pages with tag <em>{0}</em>. (Automatic Copy)
 pages-with-x-x=Pages with {0} <em>{1}</em>. (Automatic Copy)
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Pilih Item Lain (Automatic Translation)
 select-page=Pilih Halaman (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Pilih Halaman (Automatic Translation)
 select-parent=Pilih Ibu Bapa (Automatic Translation)
 select-parent-site=Pilih Tapak Induk (Automatic Translation)
 select-poll=Pilih Undian (Automatic Translation)
