--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -11652,6 +11652,7 @@ pages-option=Параметр "Сторінки" (Automatic Translation)
 pages-options=Параметри сторінок (Automatic Translation)
 pages-to-export=Сторінки для експорту (Automatic Translation)
 pages-to-publish=Сторінки для публікації (Automatic Translation)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations allow you to work in parallel in different versions of the pages of the site. Content is shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Сторінки із теґом <em>{0}</em>.
 pages-with-x-x=Сторінки із теґом <em>{0}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Вибрати інший елемент (Automatic Translation)
 select-page=Вибір сторінки (Automatic Translation)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Вибрані сторінки
 select-parent=Вибір батьківського елемента (Automatic Translation)
 select-parent-site=Вибір батьківського сайту (Automatic Translation)
 select-poll=Вибір опитування (Automatic Translation)
